<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true">

        <EditText
            android:id="@+id/edt_numCows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_hint_num_cows"
            android:inputType="numberDecimal"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true">
        <EditText
            android:id="@+id/edt_bathCap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_hint_bath_cap"
            android:inputType="numberDecimal"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true">
    <EditText
        android:id="@+id/edt_numBaths"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_hint_num_baths"
        android:inputType="numberDecimal"
        />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>