<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/hh_blue"
    tools:context=".mainmenu.MainActivity">

    <LinearLayout
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            style="@style/ButtonPrimary"
            android:id="@+id/btn_calculator"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/str_btn_calculator"
            android:textSize="20sp"
            android:textColor="@android:color/white" />

        <Button
            style="@style/ButtonPrimary"
            android:id="@+id/btn_quote_lists"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/str_btn_view_quotes"
            android:textSize="20sp"
            android:textColor="@android:color/white" />

        <Button
            style="@style/ButtonPrimary"
            android:id="@+id/btn_store"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/str_btn_store"
            android:textSize="20sp"
            android:textColor="@android:color/white" />
        </LinearLayout>
</FrameLayout>